@@ -2,6 +2,12 @@ MOAT test scripts
 John Jacobsen jacobsen@npxdesigns.com
 Requires: domhub-tools 100 or greater
 
+V00-00-08  7/26/05
+Bug fixes/new features:
+- Removed buggy interrupt counting code from moat
+
+============================================================================
+
 V00-00-07  7/19/05
 Bug fixes/new features:
 - Remove RPM dependency of dor-driver per Martin's installation
